The status bar's width budget refuses an inverted range instead of hiding one
Four bounds in the bar's layout were a max around a min. Written that way they
are the same arithmetic as a clamp while the bounds hold, and quietly different
when they do not: an inverted range answers with the lower bound and lays the bar
out wrong, where a clamp says so.

The method's javadoc already argued the bounds cannot invert - arrows plus
figures is at most the inner width minus the sentence floor, so the right-hand
limit is never below the floor itself. That paragraph is now enforced rather than
asserted. If the reasoning ever stops being true, the width sweep that walks
every width from nothing to comfortable fails at the width where it broke,
instead of a tester finding a bar drawn wrong at one size and right at every
other.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01PQsRf7qaaR9Zd7HR4m9CQw